tests-system/rbt-valid-components/output
a = 2
^ rbt-valid-components/foo.trlc:4: error: cannot overwrite frozen component a
Processed 1 model and 1 requirement file and found 1 error
